fix timer spacing

--- a/style.css
+++ b/style.css
@@ -471,13 +471,13 @@ footer {
     opacity: 0.4;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: -10;
   }
 
   #container {
     max-width: 100%;
     height: 80%;
-    padding-bottom: 30%;
+    padding-bottom: 15%;
     margin: 0 auto;
     margin-top: 30%;
     display: inline-block;
@@ -491,8 +491,8 @@ footer {
     font-weight: lighter;
     text-align: left;
     width: 100%;
-    margin: auto auto;
-    padding: auto auto;
+    margin: auto;
+    padding: auto;
   }
 
   #poem {
@@ -610,7 +610,7 @@ footer {
 
   .navigation {
     width: 150px;
-    position: absolute;
+    position: fixed;
     left: 0;
     text-align: left;
   }
